# fcpy

./: BENCHMARKS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: args.rs  clipboard.rs  config.rs  file_handling.rs  main.rs
tests/: cli.rs  integration_tests.rs
